<resources>
    <string name="app_name">SMS blocker</string>
    <string name="nav_title">SMS BLOCKER</string>
    <string name="all_sms_tab">ALL MESSAGES</string>
    <string name="blocked_sms_tab">BLOCKED</string>
    <string name="share">share</string>
    <string name="send">send</string>
    <string name="others">Others</string>

    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="update_db_txt">Update db</string>
    <string name="sms_block_menu">block this sms</string>
</resources>